--- a/styles.css
+++ b/styles.css
@@ -13,7 +13,7 @@ body, html {
 }
 
 body {
-    background: url('your-logo.png') no-repeat center center;
+    background: url('CalenDynamics.png') no-repeat center center;
     background-size: contain;
     background-color: #f3f3f3;
 }
